--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-timeframe-header/template/yield-timeframe-header.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-timeframe-header/template/yield-timeframe-header.html
@@ -2,7 +2,7 @@
 	<div class="left-side flex-row p-l-12">
 		<div class="unitpal-font dark-gray-color p-r-12 f-32 clickable" (click)="previousDay()">&lt;</div>
 		<div *ngIf="selectedDate" class="current-date dark-gray-color p-r-12 f-24"><b>{{getDateShortString()}}</b></div>
-		<div class="btn btn-danger f-10 clickable">
+		<div class="btn btn-danger btn-change-date f-10 clickable">
 			<i class="fa fa-calendar p-r-6" aria-hidden="true"></i>
 			<span>CHANGE DATE</span>
 		</div>
