--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -9,8 +9,8 @@
                         <i *ngIf="invoicePayerVM.customerDO.isTravelAgency()" class="fa fa-2x unitpal-font">*</i>
                         <b>{{invoicePayerVM.customerDO.customerName}}</b>
                     </a>
-                    <a *ngIf="invoicePayerVM.customerDO" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Change' | translate }}</a>
-                    <a *ngIf="!invoicePayerVM.customerDO" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Select Customer' | translate }}</a>
+                    <a *ngIf="invoicePayerVM.customerDO && editMode" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Change' | translate }}</a>
+                    <a *ngIf="!invoicePayerVM.customerDO && editMode" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Select Customer' | translate }}</a>
                 </td>
                 <td width="30%" class="print-container"><a class="clickable-item">{{ 'Print & Send' | translate }} <i class="fa fa-print" aria-hidden="true"></i></a></td>
             </tr>
