--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/components/yield-actions-panel/template/yield-actions-panel.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/components/yield-actions-panel/template/yield-actions-panel.html
@@ -1,6 +1,6 @@
 <div class="yield-actions-control flex-row">
 		<div class="form-group flex-row flex-center-v">
-			<div class="dark-gray-color m-r-12">Selected 3 out of 20</div>
+			<div class="dark-gray-color ellipsis-text m-r-12" title="{{getFilterStatInfoLabel()}}">{{getFilterStatInfoLabel()}}</div>
 			<select class="yield-action form-control dark-gray-color m-r-12" [(ngModel)]="selectedAction">
 				<option [value]="noAction" disabled>Select an action</option>
 				<option [value]="enums.PriceProductYieldAction.Open">Open</option>
@@ -12,7 +12,7 @@
 			</select>
 		</div>
 		<div class="interval flex-row flex-center-v dark-gray-color m-r-12" *ngIf="!forever">
-			<div class="form-group dark-gray-color m-r-12">apply to selected from</div>
+			<div class="form-group dark-gray-color ellipsis-text m-r-12">apply to selected from</div>
 			<th-date-picker
 				[initialThDate]="actionDateInterval.start" [showLabel]="false"
 				(didSelectThDate)="didSelectActionStartDate($event)"
@@ -27,10 +27,9 @@
 		</div>
 		<div class="form-group flex-row flex-center-v">
 			<input type="checkbox" class="dark-gray-color m-r-12" [(ngModel)]="forever">
-			<span class="m-r-12">Forever</span>
+			<span class="ellipsis-text m-r-12">Forever</span>
 			<div class="btn btn-danger f-10" (click)="applyChanges()">
 				<i class="fa fa-refresh fa-spin" *ngIf="isYielding"></i> 
-				<i class="fa fa-check" *ngIf="!isYielding"></i> 
 				APPLY CHANGES
 			</div>
 		</div>
