--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
@@ -1,5 +1,5 @@
 <yield-actions-panel [isYielding]="isYielding" (onApplyAction)="applyAction($event)"></yield-actions-panel>
-<div class="price-products-table p-12" *ngIf="priceProductResults">
+<div class="price-products-table" *ngIf="priceProductResults">
 	<div class="price-products-row flex-row">
 		<div class="price-products-col flex-jc-start wide p-l-14">
 			<span class="p-l-6"></span>
