[T258] Added visual feedback for clickable elements

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
@@ -8,8 +8,8 @@
 		</div>
 	</div>
 	<div class="key-metrics-row flex-row" *ngFor="let metric of metricsResults.currentItemVM.metricVMList">
-		<div class="key-metrics-col flex-jc-start wide" (click)="openKeyMetricModal(metric)">
-			<span>
+		<div class="key-metrics-col flex-jc-start wide">
+			<span class="clickable" (click)="openKeyMetricModal(metric)">
 				<span class="unitpal-font dark-gray-color f-14">{{metric.meta.fontName}}</span> 
 				<span class="dark-gray-color f-14" title="{{ metric.meta.displayName }}">{{ metric.meta.displayName }}</span>
 			</span>
