--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
@@ -3,9 +3,9 @@
 		<yield-filter-pane class="pane full-height" (filterChanged)="filterChangeHandler($event)"></yield-filter-pane>
 		<div class="main flex-column">
 			<yield-timeframe-header></yield-timeframe-header>
-			<yield-key-metrics customScroll class="{{keyMetricsViewModeDecoratorClass}}"></yield-key-metrics>
+			<yield-key-metrics class="{{keyMetricsViewModeDecoratorClass}}"></yield-key-metrics>
 			<yield-view-mode (onStateChange)="viewModeStateChanged($event)"></yield-view-mode>
-			<yield-price-products customScroll class="{{priceProductsViewModeDecoratorClass}}"></yield-price-products>
+			<yield-price-products class="{{priceProductsViewModeDecoratorClass}}"></yield-price-products>
 		</div>
 	</div>
 </div>
