--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
@@ -10,8 +10,7 @@
             <p>{{'Cost' | translate}}</p>
         </div>
         <div class="col-xs-12 col-sm-2 field-value text-field">
-            <p>{{currencySymbolString}} {{totalPrice}} 
-            </p>
+            <p><b>{{currencySymbolString}} {{totalPrice}}</b> {{'Room' | translate}} {{currencySymbolString}}{{totalRoomPrice}} / {{ 'Others' | translate }} {{currencySymbolString}}{{totalOtherPrice}}</p>
         </div>
         <div class="col-xs-12 col-sm-3 field-value text-field" *ngIf="isPenaltyPrice">
             <span class="operational-important-field"> <i class="fa unitpal-font">+</i> {{'Penalty' | translate}}</span>
