--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
@@ -20,7 +20,7 @@
 					<span class="key-metric-value oneline-text f-14 w-100" title="{{ value.price }}">{{ value.price }}</span> 
 				</span>
 				<span class="w-100" *ngIf="metric.keyMetricDO.valueType == 1">
-					<span class="percentage-metric key-metric-value oneline-text f-14" [ngStyle]="getPercentageStyles(normalizeAndReversPercentage(value.percentage))" title="{{ value.percentage }}%">{{ value.percentage * 100}}%</span> 
+					<span class="percentage-metric key-metric-value oneline-text f-14" [ngStyle]="getPercentageStyles(normalizeAndReversPercentage(value.percentage))" title="{{ value.percentage }}%">{{ value.percentage | percentage }}</span> 
 				</span>
 				<span class="w-100" *ngIf="metric.keyMetricDO.valueType == 2">
 					<span class="key-metric-value oneline-text f-14 w-100" [ngStyle]="getInventoryStyles(value)" title="{{ value.available }}/{{ value.total }}">
