--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Invoice</title>
-    
+
     <!-- Fonts -->
     <link href='assets/client/static-assets/css/roboto-font.css' rel='stylesheet' type='text/css'>
-    
+
     <!-- CSS -->
     <link href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -28,150 +28,162 @@
 </head>
 
 <body>
-    <section class="content invoice">
-        <!-- title row -->
-        <div class="row">
-            <div class="col-xs-12 invoice-header">
-                <h1>
-                    <i class="fa fa-globe"></i> Invoice.
-                    <small class="pull-right">Date: 16/08/2016</small>
-                </h1>
+    <div style="margin: 10px;">
+        <section class="content invoice">
+            <!-- title row -->
+            <div class="row">
+                <div class="col-xs-12 invoice-header">
+                    <h1>
+                        <!--<i class="fa fa-globe"></i>-->
+                        <%= invoiceLabel %>
+                            <small class="pull-right"><%= dateLabel %>: <%= dateValue %></small>
+                    </h1>
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-        </div>
-        <!-- info row -->
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                From
-                <address>
-                    <strong>Iron Admin, Inc.</strong>
-                    <br>795 Freedom Ave, Suite 600
-                    <br>New York, CA 94107
-                    <br>Phone: 1 (804) 123-9876
-                    <br>Email: ironadmin.com
-                </address>
+            <!-- info row -->
+            <div class="row invoice-info">
+                <div class="col-sm-4 invoice-col">
+                    <br>
+                    <%= fromLabel %>
+                        <address>
+                            <strong><%= hotelNameValue %></strong>
+                            <br>
+                            <%= hotelAddressFirstLineValue %>
+                                <br>
+                                <%= hotelAddressSecondLineValue %>
+                                    <br>
+                                    <%= hotelPhoneLabel %>:
+                                        <%= hotelPhoneValue %>
+                                            <br>
+                                            <%= hotelEmailLabel %>:
+                                                <%= hotelEmailValue %>
+                        </address>
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <br>
+                    <%= toLabel %>
+                        <address>
+                            <strong><%= payerNameValue %></strong>
+                            <br>
+                            <%= payerAddressFirstLineValue %>
+                                <br>
+                                <%= payerAddressSecondLineValue %>
+                                    <br>
+                                    <%= payerPhoneLabel %>:
+                                        <%= payerPhoneValue %>
+                                            <br>
+                                            <%= payerEmailLabel %>:
+                                                <%= payerEmailValue %>
+                        </address>
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <b><%= invoiceLabel %> #<%= invoiceReference %></b>
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                To
-                <address>
-                    <strong>John Doe</strong>
-                    <br>795 Freedom Ave, Suite 600
-                    <br>New York, CA 94107
-                    <br>Phone: 1 (804) 123-9876
-                    <br>Email: jon@ironadmin.com
-                </address>
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <b>Invoice #007612</b>
-                <br>
-                <br>
-                <b>Order ID:</b> 4F3S8J
-                <br>
-                <b>Payment Due:</b> 2/22/2014
-                <br>
-                <b>Account:</b> 968-34567
-            </div>
-            <!-- /.col -->
-        </div>
-        <!-- /.row -->
+            <!-- /.row -->
 
-        <!-- Table row -->
-        <div class="row">
-            <div class="col-xs-12 table">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Qty</th>
-                            <th>Product</th>
-                            <th>Serial #</th>
-                            <th style="width: 59%">Description</th>
-                            <th>Subtotal</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Call of Duty</td>
-                            <td>455-981-221</td>
-                            <td>El snort testosterone trophy driving gloves handsome gerry Richardson helvetica tousled street
-                                art master testosterone trophy driving gloves handsome gerry Richardson
-                            </td>
-                            <td>$64.50</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Need for Speed IV</td>
-                            <td>247-925-726</td>
-                            <td>Wes Anderson umami biodiesel</td>
-                            <td>$50.00</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Monsters DVD</td>
-                            <td>735-845-642</td>
-                            <td>Terry Richardson helvetica tousled street art master, El snort testosterone trophy driving gloves
-                                handsome letterpress erry Richardson helvetica tousled
-                            </td>
-                            <td>$10.70</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Grown Ups Blue Ray</td>
-                            <td>422-568-642</td>
-                            <td>Tousled lomo letterpress erry Richardson helvetica tousled street art master helvetica tousled
-                                street art master, El snort testosterone</td>
-                            <td>$25.99</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <!-- /.col -->
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-            <!-- accepted payments column -->
-            <div class="col-xs-6">
-                <p class="lead">Payment Methods:</p>
-                <i class="fa fa-money" ng-reflect-raw-class="fa-money" ng-reflect-initial-classes="fa"></i>
-                <i class="fa fa-cc-visa" ng-reflect-raw-class="fa-cc-visa" ng-reflect-initial-classes="fa"></i>
-                <i class="fa fa-cc-amex" ng-reflect-raw-class="fa-cc-amex" ng-reflect-initial-classes="fa"></i>
-                <i class="fa fa-cc-mastercard" ng-reflect-raw-class="fa-cc-mastercard" ng-reflect-initial-classes="fa"></i>
-                <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
-                    Details, more info, etc
-                </p>
-            </div>
-            <!-- /.col -->
-            <div class="col-xs-6">
-                <p class="lead">Amount Due 2/22/2014</p>
-                <div class="table-responsive">
-                    <table class="table">
+            <!-- Table row -->
+            <div class="row">
+                <div class="col-xs-12 table">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <%= itemLabel %>
+                                </th>
+                                <th>
+                                    <%= qtyLabel %>
+                                </th>
+                                <th>
+                                    <%= netUnitPriceLabel %>
+                                </th>
+                                <th>
+                                    <%= vatLabel %>
+                                </th>
+                                <th>
+                                    <%= subtotalLabel %>
+                                </th>
+                            </tr>
+                        </thead>
                         <tbody>
-                            <tr>
-                                <th style="width:50%">Subtotal:</th>
-                                <td>$250.30</td>
-                            </tr>
-                            <tr>
-                                <th>Tax (9.3%)</th>
-                                <td>$10.34</td>
-                            </tr>
-                            <tr>
-                                <th>Shipping:</th>
-                                <td>$5.80</td>
-                            </tr>
-                            <tr>
-                                <th>Total:</th>
-                                <td>$265.24</td>
-                            </tr>
+                            <% itemVMList.forEach(function(itemVM){ %>
+                                <tr>
+                                    <td>
+                                        <%= itemVM.name %>
+                                    </td>
+                                    <td>
+                                        <%= itemVM.qty %>
+                                    </td>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= itemVM.netUnitPrice %>
+                                    </td>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= itemVM.vat %>
+                                    </td>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= itemVM.subtotal %>
+                                    </td>
+                                </tr>
+                                <% }); %>
                         </tbody>
                     </table>
                 </div>
+                <!-- /.col -->
             </div>
-        </div>
-    </section>
+            <!-- /.row -->
 
+            <div class="row">
+                <!-- accepted payments column -->
+                <div class="col-xs-6">
+                    <p class="lead">
+                        <%= paymentMethodLabel %>:</p>
+                    <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;text-transform: uppercase;">
+                        <%= paymentMethodValue %>
+                    </p>
+                </div>
+                <!-- /.col -->
+                <div class="col-xs-6">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <th style="width:50%">
+                                        <%= subtotalLabel %>:</th>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= subtotalValue %>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>
+                                        <%= vatLabel %>:</th>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= vatValue %>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>
+                                        <%= totalLabel %>:</th>
+                                    <td>
+                                        <%= ccySymbol %>
+                                            <%= totalValue %>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
