--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -63,7 +63,7 @@
                             <i class="fa fa-arrow-left" aria-hidden="true"></i>
                         </label>
                     </td>
-                    <td width="40%">{{ invoiceItemVM.itemDisplayText | translate }}</td>
+                    <td width="40%"><i *ngIf="!invoiceItemVM.isMovable()" class="unitpal-font">%</i> {{ invoiceItemVM.itemDisplayText | translate }}</td>
                     <td width="10%">{{ invoiceItemVM.qty }}</td>
                     <td width="15%">{{ ccySymbol }} <b>{{ invoiceItemVM.price }}</b></td>
                     <td width="15%">{{ ccySymbol }} <b>{{ invoiceItemVM.totalPrice }}</b></td>
