[T222] removed unnecessary space on invoice pdf

--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -154,8 +154,7 @@
                                     <th style="width:50%">
                                         <%= subtotalLabel %>:</th>
                                     <td>
-                                        <%= ccySymbol %>
-                                            <%= subtotalValue %>
+                                        <%= ccySymbol %><%= subtotalValue %>
                                     </td>
                                 </tr>
                                 <tr>
